lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:10: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
			pointA = getSol(i) 
                                       ^Lander:11: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
			pointB = getSol(i+1)
                                       ^